# Cartographer

./: .cartographerignore  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  claude_desktop_config.example.json  opencode.json  pyproject.toml  results.json
.cartographer/: config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
cartographer/: __init__.py  __main__.py  cli.py  setup.py
cartographer/architecture/: engine.py
cartographer/compression/: __init__.py  engine.py
cartographer/core/: models.py
cartographer/embedding/: engine.py
cartographer/git/: engine.py
cartographer/graph/: builder.py
cartographer/ingestion/: discoverer.py  engine.py  fingerprint.py  references.py  schema.py
cartographer/mcp/: server.py
cartographer/parser/: base.py  registry.py
cartographer/parser/languages/: c.py  cpp.py  csharp.py  elixir.py  go.py  groovy.py  java.py  javascript.py  julia.py  kotlin.py  lua.py  php.py  python.py  ruby.py  rust.py  scala.py  swift.py  tsx.py  typescript.py  zig.py
cartographer/query/: engine.py
cartographer/retrieval/: searcher.py  summarizer.py  traversal.py
cartographer/storage/: connection.py
docs/: architecture.md  benchmarks.md  commands.md  getting-started.md  opencode.md  technical.md  troubleshooting.md  whitepaper-with-images.md  whitepaper.md
docs/diagrams/: architecture-pipeline.mmd  indexing-pipeline.mmd  knowledge-graph-example.mmd  mcp-agent-flow.mmd  throughput-by-language.mmd  token-savings.mmd
docs/internal/: prd.md  project_description.md
editors/vscode/: .vscodeignore  LICENSE  package-lock.json  package.json
editors/vscode/scripts/: graph_data.py
editors/vscode/src/: cartographer.ts  clientManager.ts  config.ts  extension.ts  graphWebview.ts  mcpClient.ts  treeViews.ts
notebooks/: benchmark_analysis.ipynb  benchmark_results.csv
tests/: benchmark.py  test_architecture.py  test_compression.py  test_integration.py  test_parsers.py  test_query.py
