[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cartographer"
version = "0.1.0"
description = "Repository Intelligence Operating System"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ehasan Ahmed", email = "ehasan.ahmed01@gmail.com" }]
requires-python = ">=3.10"

dependencies = [
    "click>=8.1",
    "tree-sitter>=0.23,<1.0",
    "pyyaml>=6.0",
    "packaging>=24.0",
    "fastembed>=0.8.0",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "mcp>=1.0.0",
    "pathspec>=0.12",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-kotlin>=1.0.0",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-php>=0.23",
    "tree-sitter-ruby>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-swift>=0.5.0",
    "tree-sitter-scala>=0.23",
    "tree-sitter-elixir>=0.3.3",
    "tree-sitter-lua>=0.2.0",
    "tree-sitter-julia>=0.23",
    "tree-sitter-zig>=1.0.0",
    "tree-sitter-groovy>=0.1.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/Icarus-afk/cartographer"
Repository = "https://github.com/Icarus-afk/cartographer"
BugTracker = "https://github.com/Icarus-afk/cartographer/issues"
Documentation = "https://github.com/Icarus-afk/cartographer/tree/main/docs"

[project.optional-dependencies]
watch = ["watchdog>=4.0"]

[project.scripts]
cartographer = "cartographer.cli:main"
cartographer-mcp = "cartographer.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["cartographer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
